@@ -3,6 +3,8 @@ changes relative to sbcl-1.3.21:
   * minor incompatible change: DESTRUCTURING-BIND treats non-toplevel () as
     nested empty pattern. This seems to be what the standard mandates, so
     conforming code should not be affected.
+  * bug fix: save-lisp-and-die is able to collect more garbage on non-x86oid
+    gencgc targets.
 
 changes in sbcl-1.3.21 relative to sbcl-1.3.20:
   * minor incompatible change: the CLOBBER-IT restart for defstruct redefintion
